# inscript

./: .gitignore  CHANGELOG.md  README.md  SPEC_PROMPT_CUBE.md  pyproject.toml
inscript_pkg/: __init__.py  categories.py  commands.py  concepts.py  explore.py  export.py  hook.py  inference.py  mcp_server.py  permissions.py  replay.py  viz.py
tests/: test_categories.py  test_commands.py  test_commits.py  test_concepts.py  test_hook.py  test_infer_branches.py  test_init.py  test_mcp.py  test_replay.py
